--- a/ejercicios-dom/css/styles.css
+++ b/ejercicios-dom/css/styles.css
@@ -1,51 +1,150 @@
+:root {
+	--main-red: rgb(247, 7, 7);
+	--orange: rgb(255, 165, 0);
+	--light-orange: rgb(255, 196, 0);
+	--cream: rgb(224, 222, 222);
+	--black: rgb(0, 0, 0);
+	--transparent-black: rgb(0, 0, 0, 0.6);
+}
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	scroll-behavior: smooth;
-	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+		"Lucida Sans", Arial, sans-serif;
 }
-.navbar {
-	background-color: red;
+body {
+	overflow-x: hidden;
+}
+main {
+	position: absolute;
+	margin-top: 60px;
+	width: 100%;
+	left: 0;
+	transition: 0.5s;
+}
+img {
+	max-width: 100%;
+	height: auto;
+}
+.container {
+	padding: 40px;
+	padding-top: 70px;
+	text-align: center;
+	min-height: 100vh;
+}
+a {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: bold;
+	height: 60px;
+	width: 100%;
+	color: var(--black);
+	transition: 0.5s;
+	padding: 0 20px;
+}
+
+/* Header *********************************/
+header {
+	background-color: var(--main-red);
+	display: flex;
+	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 60px;
-	padding: 0 20px;
-	font-size: 30px;
+	padding-left: 20px;
 	position: fixed;
 	top: 0;
+	z-index: 10;
 }
-.navbar i {
-	font-size: 30px;
-	cursor: pointer;
-}
-main {
-	margin-top: 60px;
-}
-.container {
-	padding: 100px;
+.name {
 	text-align: center;
+	font-weight: bold;
+	font-size: 24px;
 }
-.menu {
+.desktop-navbar {
+	display: none;
+}
+.desktop-navbar a:hover {
+	background-color: var(--orange);
+}
+
+/* Mobile Navbar **************************/
+.mobile-navbar {
 	display: flex;
 	flex-direction: column;
-	background-color: orange;
-	position: absolute;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: var(--orange);
 	font-size: 20px;
-	width: 60%;
+	width: 100%;
 	height: 100vh;
-	padding: 40px 0;
+	margin-top: 60px;
+	padding-bottom: 60px;
+	position: fixed;
+	z-index: 400;
 	top: 0;
-	right: 40%;
-	transition: 0.5s;
+	transform: translate(100%, 100%);
+	transition: 0.3s;
 }
-.menu a {
-	text-decoration: none;
-	margin: 40px;
+.mobile-navbar.active {
+	transform: translate(0, 0);
+	transition: 0.3s;
 }
-.inactive {
-	right: 100%;
-	transition: 0.5s;
+.menu-btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	width: 40px;
+	height: 40px;
+	padding: 10px;
+	border-radius: 50%;
+	bottom: 10px;
+	right: 10px;
+	background-color: var(--orange);
+	z-index: 500;
+}
+.menu-btn i {
+	font-size: 24px;
+	cursor: pointer;
+}
+.closed {
+	display: none;
+}
+
+/* Section 1 ********************************/
+#section1 {
+	background-color: var(--cream);
+}
+.clock-buttons {
+	margin-top: 30px;
+}
+.clock-buttons button {
+	background-color: var(--main-red);
+	padding: 10px;
+	border-radius: 10px;
+	width: 120px;
+	border: none;
+	color: white;
+}
+
+/* Media Query**********************/
+@media screen and (min-width: 650px) {
+	header {
+		justify-content: space-between;
+	}
+	.desktop-navbar {
+		display: flex;
+	}
+	.mobile-navbar {
+		display: none;
+	}
+	.menu-btn {
+		display: none;
+	}
 }
