--- a/ejercicios-dom/css/styles.css
+++ b/ejercicios-dom/css/styles.css
@@ -1,7 +1,7 @@
 :root {
 	--main-red: rgb(247, 7, 7);
 	--orange: rgb(255, 165, 0);
-	--light-orange: rgb(255, 196, 0);
+	--light-orange: rgb(249, 225, 48);
 	--cream: rgb(224, 222, 222);
 	--black: rgb(0, 0, 0);
 	--white: rgb(255, 255, 255);
@@ -287,6 +287,61 @@ header {
 }
 .offline {
 	background-color: var(--main-red);
+}
+
+/* Responsive Slider *******************************/
+.slider {
+	position: relative;
+	width: 100%;
+	margin: 1rem auto;
+	text-align: center;
+}
+.slider-container {
+	position: relative;
+	height: 500px;
+}
+.slide-content {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: opacity 1s ease;
+	opacity: 0;
+	visibility: hidden;
+}
+.slide-content img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.slide-content.active {
+	opacity: 1;
+	visibility: visible;
+}
+.slider button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--orange);
+	border: none;
+	text-decoration: none;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	font-size: 20px;
+	transition: all 0.5s ease;
+}
+.slider button:hover {
+	background-color: var(--light-orange);
+}
+.slider-buttons {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	position: absolute;
+	top: 45%;
+	padding: 5px;
 }
 
 /* Media Query**********************/
