--- a/ejercicios-dom/css/styles.css
+++ b/ejercicios-dom/css/styles.css
@@ -35,19 +35,6 @@ img {
 	text-align: center;
 	min-height: 100vh;
 }
-a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-decoration: none;
-	font-size: 16px;
-	font-weight: bold;
-	height: 60px;
-	width: 100%;
-	color: var(--black);
-	transition: 0.5s;
-	padding: 0 20px;
-}
 
 /* Header *********************************/
 header {
@@ -67,34 +54,48 @@ header {
 	font-weight: bold;
 	font-size: 24px;
 }
-.desktop-navbar {
-	display: none;
-}
-.desktop-navbar a:hover {
-	background-color: var(--orange);
-}
 
-/* Mobile Navbar **************************/
-.mobile-navbar {
+/* Navbar **************************/
+.navbar {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
 	background-color: var(--orange);
 	font-size: 20px;
-	width: 100%;
+	width: 70%;
 	height: 100vh;
 	margin-top: 60px;
 	padding-bottom: 60px;
 	position: fixed;
 	z-index: 400;
 	top: 0;
+	right: 0;
 	transform: translate(100%, 0);
-	transition: 0.3s;
+	transition: 0.5s;
 }
-.mobile-navbar.active {
+.navbar a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	font-size: 14px;
+	font-weight: bold;
+	width: 100%;
+	height: 100%;
+	color: var(--black);
+	transition: 0.5s;
+	padding: 0 20px;
+}
+.navbar a:hover {
+	background-color: var(--light-orange);
+}
+.navbar.active {
 	transform: translate(0, 0);
 	transition: 0.3s;
+}
+.navbar a.active {
+	background-color: var(--light-orange);
 }
 .menu-btn {
 	display: flex;
@@ -144,7 +145,7 @@ header {
 .stage {
 	display: flex;
 	min-height: 50vh;
-	min-width: 80vw;
+	min-width: 80%;
 	background-color: var(--cream);
 	margin-top: 20px;
 }
@@ -176,7 +177,7 @@ header {
 }
 .scroll-top-btn:hover {
 	background-color: black;
-	color: var(--light-orange);
+	color: var(--orange);
 }
 .hidden {
 	visibility: hidden;
@@ -204,22 +205,22 @@ header {
 }
 .theme-btn:hover {
 	background-color: black;
-	color: var(--light-orange);
+	color: var(--orange);
 }
 .light-theme {
 	background-color: var(--white);
 	color: var(--black);
-	transition: 0.5s;
+	transition: 1s;
 }
 .dark-theme {
 	background-color: var(--black);
 	color: var(--white);
-	transition: 0.5s;
+	transition: 1s;
 }
 .sun-icon,
 .moon-icon {
 	display: block;
-	transition: all 0.5s;
+	transition: all 0.5s ease-out;
 }
 .inactive {
 	display: none;
@@ -323,7 +324,7 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--orange);
+	background-color: var(--white);
 	border: none;
 	text-decoration: none;
 	width: 40px;
@@ -333,7 +334,8 @@ header {
 	transition: all 0.5s ease;
 }
 .slider button:hover {
-	background-color: var(--light-orange);
+	background-color: var(--black);
+	color: var(--white);
 }
 .slider-buttons {
 	display: flex;
@@ -345,20 +347,22 @@ header {
 }
 
 /* Media Query**********************/
-@media screen and (min-width: 650px) {
-	header {
-		justify-content: space-between;
+@media screen and (min-width: 750px) {
+	main {
+		width: 80%;
 	}
-	.desktop-navbar {
-		display: flex;
+	.navbar {
+		width: 20%;
+		transform: none;
 	}
-	.mobile-navbar {
-		display: none;
+	.navbar a {
+		justify-content: left;
 	}
 	.menu-btn {
 		display: none;
 	}
 	.scroll-top-btn {
-		right: 10px;
+		right: initial;
+		left: 70px;
 	}
 }
