--- a/ejercicios-dom/css/styles.css
+++ b/ejercicios-dom/css/styles.css
@@ -1,6 +1,6 @@
 :root {
 	--main-red: rgb(247, 7, 7);
-	--orange: rgb(255, 165, 0);
+	--orange: #ffa600;
 	--light-orange: rgb(249, 225, 48);
 	--cream: rgb(224, 222, 222);
 	--black: rgb(0, 0, 0);
@@ -283,7 +283,7 @@ header {
 	align-self: center;
 	font-weight: bold;
 	text-align: center;
-	background-color: rgb(16, 235, 16);
+	background-color: rgb(77, 248, 77);
 	color: white;
 }
 .offline {
@@ -344,6 +344,86 @@ header {
 	position: absolute;
 	top: 45%;
 	padding: 5px;
+}
+
+/* Video inteligente ********************************/
+.video {
+	width: 100%;
+}
+
+/* Validaciones de formularios **********************/
+.contact-form {
+	padding: 40px;
+	margin-top: 40px;
+	background-color: var(--cream);
+	display: block;
+	border-radius: 10px;
+	gap: 30px;
+	--form-ok-color: rgb(5, 161, 5);
+	--form-error-color: rgb(255, 0, 0);
+}
+.contact-form > * {
+	margin-top: 50px;
+	padding: 10px;
+	resize: none;
+	width: 100%;
+}
+.contact-form legend,
+.contact-form-response {
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+}
+.contact-form input,
+.contact-form textarea {
+	font-size: 14px;
+	border-radius: 10px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.contact-form input[type="submit"] {
+	background-color: #ffa600;
+	width: 200px;
+	border: none;
+	border-radius: 10px;
+	font-size: large;
+	font-weight: bold;
+}
+.contact-form *::placeholder {
+	color: rgb(0, 0, 0);
+}
+.contact-form [required]:valid {
+	border: solid var(--form-ok-color);
+}
+.contact-form [required]:invalid {
+	border: solid var(--form-error-color);
+}
+.contact-form-error {
+	font-size: 80%;
+	padding: 5px 30px;
+	margin-top: -8px;
+	background-color: var(--form-error-color);
+	color: var(--white);
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	transition: all 0.8s ease;
+}
+.contact-form-error.is-active {
+	display: block;
+	animation: show-message 1s 1 normal 0s ease-out both;
+}
+.none {
+	display: none;
+}
+@keyframes show-message {
+	0% {
+		visibility: hidden;
+		opacity: 0;
+		transform: translateY(-100%);
+	}
+	100% {
+		visibility: visible;
+		opacity: 1;
+	}
 }
 
 /* Media Query**********************/
