--- a/ejercicios-dom/css/styles.css
+++ b/ejercicios-dom/css/styles.css
@@ -414,6 +414,38 @@ header {
 .none {
 	display: none;
 }
+.contact-form-response {
+	background-color: var(--light-orange);
+	color: var(--black);
+	border-radius: 10px;
+	padding: 20px;
+}
+
+/* Narrador ****************************************************************/
+#section12 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+#section12 select,
+#section12 textarea {
+	background-color: var(--cream);
+	resize: none;
+	border: none;
+	padding: 10px 5px;
+	border-radius: 10px;
+	color: var(--black);
+	max-width: 500px;
+	min-width: 250px;
+}
+#speech-btn {
+	background-color: var(--orange);
+	border: none;
+	border-radius: 10px;
+	padding: 10px 20px;
+}
 @keyframes show-message {
 	0% {
 		visibility: hidden;
